New entitys, roles with number, cors
