# backend/src/models/user.model.js
@@ -1,0 +1,33 @@
+const mongoose = require('mongoose');
+
+const UserSchema = mongoose.Schema({
+    first_name: {
+        type: String,
+        required: true
+    },
+    last_name: {
+        type: String,
+        required: true
+    },
+    address: {
+        type: mongoose.Schema.Types.ObjectId,
+        ref: 'Address'
+    },
+    email: {
+        type: String,
+        required: true
+    },
+    password: {
+        type: String,
+        required: true
+    },
+    role: {
+        type: Number,
+        default: 1
+    },
+    accessToken: Number,
+}, {
+    timeStamps: true
+});
+
+module.exports = mongoose.model('User', UserSchema);
